--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ CLIENT_URL = http://localhost:3000
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_NAME=newhelper
+DB_NAME=ssquickhelper
 DB_PASSWORD=
 
 
